--- a/src-capacitor/android/app/src/main/res/values/strings.xml
+++ b/src-capacitor/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">ARTELBURGER</string>
-    <string name="title_activity_main">ARTELBURGER</string>
+    <string name="app_name">Артель Бургер</string>
+    <string name="title_activity_main">Артель бургер</string>
     <string name="package_name">org.capacitor.quasar.app</string>
     <string name="custom_url_scheme">org.capacitor.quasar.app</string>
 </resources>
