--- a/src-capacitor/android/app/src/main/res/values/strings.xml
+++ b/src-capacitor/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">Артель Бургер</string>
     <string name="title_activity_main">Артель Бургер</string>
-    <string name="package_name">org.capacitor.quasar.app</string>
-    <string name="custom_url_scheme">org.capacitor.quasar.app</string>
+    <string name="package_name">org.capacitor.quasar.app.burger</string>
+    <string name="custom_url_scheme">org.capacitor.quasar.app.burger</string>
 </resources>
